# video-enhancer

./: .gitignore  BUILD.md  LICENSE  README.md  Video Enhancer.bat  VideoEnhancer.pyw  cli.py  core.py  gui.py  pyproject.toml  requirements.txt
assets/: README.md  make_logo.py
packaging/: build_macos.sh  installer.iss  version_info.txt  windows.spec
scripts/: download_models.py
tests/: test_core.py
