[project]
name = "video-enhancer"
version = "1.0.0"
description = "Desktop app for upscaling and cleaning up video with Real-ESRGAN and ffmpeg"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "imageio-ffmpeg>=0.5",
    "tkinterdnd2>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyinstaller>=6"]

[project.scripts]
video-enhancer = "cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
